--- a/.github/workflows/building-iso-20.yml
+++ b/.github/workflows/building-iso-20.yml
@@ -45,7 +45,7 @@ jobs:
           sudo chroot ~/deepin20 bash /tmp/github.sh
           sudo chroot ~/deepin20 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin20 apt update
-          sudo chroot ~/deepin20 apt install linux-kernel-dclc-gfdgdxi -y
+          sudo chroot ~/deepin20 apt install linux-kernel-6.1.35-qitong -y
           sudo chroot ~/deepin20 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin20 apt update
           sudo chroot ~/deepin20 apt clean
