--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -47,7 +47,7 @@ jobs:
           sudo chroot ~/deepin15 bash /tmp/github.sh
           sudo chroot ~/deepin15 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
-          sudo chroot ~/deepin15 apt install linux-kernel-dclc-gfdgdxi -y
+          sudo chroot ~/deepin15 apt install linux-kernel-6.1.35-qitong -y
           sudo chroot ~/deepin15 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
           sudo chroot ~/deepin15 apt clean
@@ -65,9 +65,9 @@ jobs:
           sudo mv ~/deepin15/backup/*.squashfs ~/squashfs/deepin-15-$kernel-amd64.squashfs
           sudo chroot ~/deepin15 bash -c "mv /boot/initrd.img-* /initrd.img-$kernel"
           sudo chroot ~/deepin15 bash -c "mv /boot/vmlinuz-* /vmlinuz-$kernel"
-          curl -F "file=@$HOME/deepin15/vmlinuz-$kernel" "$UPLOADURL"
-          curl -F "file=@$HOME/deepin15/initrd.img-$kernel" "$UPLOADURL"
-          curl -F "file=@$HOME/squashfs/deepin-15-$kernel-amd64.squashfs" "$UPLOADURL"
+          #curl -F "file=@$HOME/deepin15/vmlinuz-$kernel" "$UPLOADURL"
+          #curl -F "file=@$HOME/deepin15/initrd.img-$kernel" "$UPLOADURL"
+          #curl -F "file=@$HOME/squashfs/deepin-15-$kernel-amd64.squashfs" "$UPLOADURL"
           
 
           sudo mv $HOME/squashfs/deepin-15-$kernel-amd64.squashfs ~/deepin15.squashfs
