--- a/.github/workflows/building-iso-23.yml
+++ b/.github/workflows/building-iso-23.yml
@@ -43,7 +43,7 @@ jobs:
           sudo chroot ~/deepin23 bash /tmp/github.sh
           sudo chroot ~/deepin23 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin23 apt update
-          sudo chroot ~/deepin23 apt install linux-kernel-dclc-gfdgdxi -y
+          sudo chroot ~/deepin23 apt install linux-headers-4.19.288-amd64-desktop-hwe  linux-image-4.19.288-amd64-desktop-hwe -y
           sudo chroot ~/deepin23 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin23 apt update
           sudo chroot ~/deepin23 apt clean
