--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -23,7 +23,7 @@ jobs:
           # 获取镜像
           wget https://github.com/gfdgd-xi/dclc-kernel/raw/main/kernel.txt
           kernel=`cat kernel.txt`
-          deepin15=https://cdimage.deepin.com/releases-archive/15.11/deepin-15.11-amd64.iso
+          deepin15=https://cdimage-download.chinauos.com//home/22.0-release/uniontechos-desktop-22.0-home-k510-amd64-env.iso?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2ODk1NTk0MTUsImZpbGVfbmFtZSI6Ii9ob21lLzIyLjAtcmVsZWFzZS91bmlvbnRlY2hvcy1kZXNrdG9wLTIyLjAtaG9tZS1rNTEwLWFtZDY0LWVudi5pc28ifQ.x6d_WPFBKVTkqq2DyqSmTKpRKnN1zRZGtMx2X_l0qfY
           deepin20=https://cdimage.deepin.com/releases/20.9/deepin-desktop-community-20.9-amd64.iso
           deepin23=https://cdimage.deepin.com/releases/23-Beta/deepin-desktop-community-23-Beta-amd64.iso
 
