--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -47,7 +47,7 @@ jobs:
           sudo chroot ~/deepin15 bash /tmp/github.sh
           sudo chroot ~/deepin15 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
-          sudo chroot ~/deepin15 apt install linux-headers-4.19.288-amd64-desktop-hwe  linux-image-4.19.288-amd64-desktop-hwe -y
+          sudo chroot ~/deepin15 apt install linux-headers-6.4.3-amd64-desktop linux-image-6.4.3-amd64-desktop  -y
           sudo chroot ~/deepin15 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
           sudo chroot ~/deepin15 apt clean
