--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -23,7 +23,7 @@ jobs:
           # 获取镜像
           wget https://github.com/gfdgd-xi/dclc-kernel/raw/main/kernel.txt
           kernel=`cat kernel.txt`
-          deepin15=https://cdimage.deepin.com/releases-archive/15.11/deepin-15.11-amd64.iso
+          deepin15=https://cdimage-download.chinauos.com//home/22.0-release/uniontechos-desktop-22.0-home-k510-amd64-env.iso
           deepin20=https://cdimage.deepin.com/releases/20.9/deepin-desktop-community-20.9-amd64.iso
           deepin23=https://cdimage.deepin.com/releases/23-Beta/deepin-desktop-community-23-Beta-amd64.iso
 
@@ -49,13 +49,12 @@ jobs:
           sudo chroot ~/deepin15 apt update
           sudo chroot ~/deepin15 apt install linux-headers-6.4.3-amd64-desktop linux-image-6.4.3-amd64-desktop  -y
           sudo chroot ~/deepin15 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
+          sudo chroot ~/deepin15 rm /etc/apt/trusted.gpg.d/gfdgdxi-kernel-list.gpg
+          sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/gfdgdxi-kernel-list.list
           sudo chroot ~/deepin15 apt update
           sudo chroot ~/deepin15 apt clean
-          sudo aria2c https://raw.githubusercontent.com/gfdgd-xi/dclc-kernel/main/wallpaper.jpg -x 16 -s 16 -d ~/deepin15/usr/share/wallpapers/deepin -o dclc-new-kernel-wallpaper.jpg
-          sudo aria2c https://raw.githubusercontent.com/gfdgd-xi/dclc-kernel/main/wallpaper.jpg -x 16 -s 16 -d ~/deepin15/usr/share/wallpapers/deepin -o desktop.jpg
-          sudo bash -c "echo Deepin Community Live CD Install 版（Deepin15，$kernel 内核版本） > /home/runner/deepin15/etc/dclc-info.txt"
-          sudo bash -c "echo 镜像构建时间：`date`，内核：$kernel >> /home/runner/deepin15/etc/dclc-info.txt"
-          sudo bash -c "echo By gfdgd xi >> /home/runner/deepin15/etc/dclc-info.txt"
+        
+          
           # 拷贝定制过的 lub
           sudo aria2c -d ~/deepin15/tmp http://github.com/gfdgd-xi/dclc-kernel/raw/main/lub
           sudo chmod 777 ~/deepin15/tmp/lub
