--- a/.github/workflows/building-iso-20.yml
+++ b/.github/workflows/building-iso-20.yml
@@ -47,14 +47,10 @@ jobs:
           sudo chroot ~/deepin20 apt update
           sudo chroot ~/deepin20 apt install linux-headers-4.19.288-amd64-desktop-hwe linux-image-4.19.288-amd64-desktop-hwe  -y
           sudo chroot ~/deepin20 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
+          sudo chroot ~/deepin20 rm /etc/apt/trusted.gpg.d/gfdgdxi-kernel-list.gpg
+          sudo chroot ~/deepin20 rm /etc/apt/sources.list.d/gfdgdxi-kernel-list.list
           sudo chroot ~/deepin20 apt update
           sudo chroot ~/deepin20 apt clean
-          sudo mv ~/deepin20/usr/share/wallpapers/deepin/desktop.jpg ~/deepin20/usr/share/wallpapers/deepin/desktop-default.jpg
-          sudo aria2c https://raw.githubusercontent.com/gfdgd-xi/dclc-kernel/main/wallpaper.jpg -x 16 -s 16 -d ~/deepin20/usr/share/wallpapers/deepin -o dclc-new-kernel-wallpaper.jpg
-          sudo aria2c https://raw.githubusercontent.com/gfdgd-xi/dclc-kernel/main/wallpaper.jpg -x 16 -s 16 -d ~/deepin20/usr/share/wallpapers/deepin -o desktop.jpg
-          sudo bash -c "echo Deepin Community Live CD Install 版（Deepin20，$kernel 内核版本） > /home/runner/deepin20/etc/dclc-info.txt"
-          sudo bash -c "echo 镜像构建时间：`date`，内核：$kernel >> /home/runner/deepin20/etc/dclc-info.txt"
-          sudo bash -c "echo By gfdgd xi >> /home/runner/deepin20/etc/dclc-info.txt"
           # 拷贝定制过的 lub
           sudo aria2c -d ~/deepin20/tmp http://github.com/gfdgd-xi/dclc-kernel/raw/main/lub
           sudo chmod 777 ~/deepin20/tmp/lub
@@ -63,40 +59,9 @@ jobs:
           sudo mv ~/deepin20/backup/*.squashfs ~/squashfs/deepin-20-$kernel-amd64.squashfs
           #curl -F "file=@$HOME/squashfs/deepin-20-$kernel-amd64.squashfs" "$UPLOADURL"
 
-          # 高级定制
-          sudo bash -c "echo  deb https://community-packages.deepin.com/deepin/ apricot main contrib non-free > /home/runner/deepin20/etc/apt/sources.list"
-          sudo rm ~/deepin20/tmp/github.sh
-          sudo rm -rfv ~/deepin20/tmp/gfdgd-xi-sources
-          sudo aria2c -d ~/deepin20/tmp http://apt.gfdgdxi.top/sources/github.sh
-          sudo chroot ~/deepin20 bash /tmp/github.sh
-          sudo rm ~/deepin20/tmp/github.sh
-          sudo rm -rfv ~/deepin20/tmp/gfdgd-xi-sources
-          sudo aria2c -d ~/deepin20/tmp http://deb.wine.wine-runner.gfdgdxi.top/sources/github.sh
-          sudo chroot ~/deepin20 bash /tmp/github.sh
-          sudo rm ~/deepin20/tmp/github.sh
-          sudo rm -rfv ~/deepin20/tmp/gfdgd-xi-sources
-          sudo chroot ~/deepin20 apt update
-          sudo chroot ~/deepin20 apt purge libreoffice* -y
-          sudo chroot ~/deepin20 apt install spark-deepin-wine-runner -y
-          sudo chroot ~/deepin20 apt install com.oray.sunlogin.client -y
-          #sudo chroot ~/deepin20 apt install cn.wps.wps-office -y
-          sudo chroot ~/deepin20 apt install spark-store -y
-          sudo chroot ~/deepin20 aptss ssupdate
-          sudo chroot ~/deepin20 aptss install winfonts -y
-          sudo chroot ~/deepin20 aptss install linuxqq -y
-          sudo chroot ~/deepin20 aptss install com.qq.weixin.spark -y
-          sudo chroot ~/deepin20 aptss install com.github.ccc-app-manager -y
-          sudo chroot ~/deepin20 aptss install dde-dock-monitor-plugin -y
-          #sudo chroot ~/deepin20 apt install com.gitee.uengine.runner.spark -y
-          sudo chroot ~/deepin20 apt clean
-          sudo chroot ~/deepin20 rm -rfv /backup
-          sudo chroot ~/deepin20 mkdir -p /backup
-          sudo chroot ~/deepin20 bash -c "echo -e 'c\n\ny\n/backup\ny\ny\ny\n\ny\n' | /tmp/lub -b"
-          sudo mv ~/deepin20/backup/*.squashfs ~/squashfs/deepin-20-$kernel-amd64-more.squashfs
-          #curl -F "file=@$HOME/squashfs/deepin-20-$kernel-amd64-more.squashfs" "$UPLOADURL"
+       
           # 提交
           sudo mv $HOME/squashfs/deepin-20-$kernel-amd64.squashfs ~/deepin20.squashfs
-          sudo mv $HOME/squashfs/deepin-20-$kernel-amd64-more.squashfs ~/deepin20-more.squashfs
           
           sudo umount ~/deepin20/dev/pts | true
           sudo umount ~/deepin20/dev/shm | true
