--- a/.github/workflows/building-iso-20.yml
+++ b/.github/workflows/building-iso-20.yml
@@ -75,6 +75,7 @@ jobs:
           sudo umount ~/deepin20/sys | true
           sudo umount ~/deepin20/proc | true
           sudo rm -rfv ~/deepin20 | true
+          exit
           
       - name: upload result(deepin 20)
         uses: actions/upload-artifact@v1
