--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -23,7 +23,7 @@ jobs:
           # 获取镜像
           wget https://github.com/gfdgd-xi/dclc-kernel/raw/main/kernel.txt
           kernel=`cat kernel.txt`
-          deepin15=https://cdimage.deepin.com/releases-archive/12.12.1/desktop/deepin_12.12.1_zh-hans_final_amd64.iso
+          deepin15=https://cdimage.deepin.com/releases-archive/15.11/deepin-15.11-amd64.iso
           deepin20=https://cdimage.deepin.com/releases/20.9/deepin-desktop-community-20.9-amd64.iso
           deepin23=https://cdimage.deepin.com/releases/23-Beta/deepin-desktop-community-23-Beta-amd64.iso
 
