--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -48,7 +48,7 @@ jobs:
           sudo chroot ~/deepin15 bash /tmp/github.sh
           sudo chroot ~/deepin15 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
-          sudo chroot ~/deepin15 apt install linux-headers-6.4.4-amd64-desktop linux-image-6.4.4-amd64-desktop  -y
+          sudo chroot ~/deepin15 apt install linux-headers-6.4.4-amd64-desktop linux-image-6.4.4-amd64-desktop linux-libc-dev6.4.4-1 -y
           sudo chroot ~/deepin15 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 rm /etc/apt/trusted.gpg.d/gfdgdxi-kernel-list.gpg
           sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/gfdgdxi-kernel-list.list
