--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -45,7 +45,7 @@ jobs:
           # 设置 DNS
           sudo chroot ~/deepin15 bash -c "echo nameserver 8.8.8.8 ./ > /etc/resolv.conf"
           sudo aria2c -d ~/deepin15/tmp http://kernel.dclc.gfdgdxi.top/sources/github.sh
-          sudo chroot ~/deepin15 bash /tmp/github.sh
+          sudo chroot ~/deepin15 wget -qO - https://dl.xanmod.org/archive.key | gpg --dearmor -o /usr/share/keyrings/xanmod-archive-keyring.gpg
           sudo chroot ~/deepin15 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
           sudo chroot ~/deepin15 apt install linux-headers-6.4.4-amd64-desktop linux-image-6.4.4-amd64-desktop -y
