--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -49,9 +49,8 @@ jobs:
           sudo chroot ~/deepin15 bash -c "echo 'deb [signed-by=/usr/share/keyrings/xanmod-archive-keyring.gpg] http://deb.xanmod.org releases main' |  tee /etc/apt/sources.list.d/xanmod-release.list"
           sudo chroot ~/deepin15 apt update
           sudo chroot ~/deepin15 apt install linux-headers-6.4.4-amd64-desktop linux-image-6.4.4-amd64-desktop -y
-          sudo chroot ~/deepin15 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
-          sudo chroot ~/deepin15 rm /etc/apt/trusted.gpg.d/gfdgdxi-kernel-list.gpg
-          sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/gfdgdxi-kernel-list.list
+          sudo chroot ~/deepin15 rm /usr/share/keyrings/xanmod-archive-keyring.gpg
+          sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/xanmod-release.list
           sudo chroot ~/deepin15 apt update
           sudo chroot ~/deepin15 apt clean
         
