--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -48,7 +48,7 @@ jobs:
           sudo chroot ~/deepin15 wget -qO - https://dl.xanmod.org/archive.key | gpg --dearmor -o /usr/share/keyrings/xanmod-archive-keyring.gpg
           sudo chroot ~/deepin15 bash -c "echo 'deb [signed-by=/usr/share/keyrings/xanmod-archive-keyring.gpg] http://deb.xanmod.org releases main' |  tee /etc/apt/sources.list.d/xanmod-release.list"
           sudo chroot ~/deepin15 apt update
-          sudo chroot ~/deepin15 apt install linux-headers-6.4.4-amd64-desktop linux-image-6.4.4-amd64-desktop -y
+          sudo chroot ~/deepin15 apt install  linux-xanmod-lts-x64v1 -y
           sudo chroot ~/deepin15 rm /usr/share/keyrings/xanmod-archive-keyring.gpg
           sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/xanmod-release.list
           sudo chroot ~/deepin15 apt update
