--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -44,6 +44,8 @@ jobs:
           # 设置 DNS
           sudo chroot ~/deepin15 bash -c "echo nameserver 8.8.8.8 ./ > /etc/resolv.conf"
           sudo aria2c -d ~/deepin15/tmp http://kernel.dclc.gfdgdxi.top/sources/github.sh
+          sudo chroot ~/deepin15 apt update
+          sudo chroot ~/deepin15 apt upgrade
           sudo chroot ~/deepin15 bash /tmp/github.sh
           sudo chroot ~/deepin15 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
@@ -52,7 +54,6 @@ jobs:
           sudo chroot ~/deepin15 rm /etc/apt/trusted.gpg.d/gfdgdxi-kernel-list.gpg
           sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/gfdgdxi-kernel-list.list
           sudo chroot ~/deepin15 apt update
-          sudo chroot ~/deepin15 apt upgrade
           sudo chroot ~/deepin15 apt clean
         
           
