--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -23,7 +23,7 @@ jobs:
           # 获取镜像
           wget https://github.com/gfdgd-xi/dclc-kernel/raw/main/kernel.txt
           kernel=`cat kernel.txt`
-          deepin15=https://cdimage.deepin.com/releases-archive/15.8/deepin-15.8-amd64.iso
+          deepin15=
           deepin20=https://cdimage.deepin.com/releases/20.9/deepin-desktop-community-20.9-amd64.iso
           deepin23=https://cdimage.deepin.com/releases/23-Beta/deepin-desktop-community-23-Beta-amd64.iso
 
@@ -47,7 +47,7 @@ jobs:
           sudo chroot ~/deepin15 bash /tmp/github.sh
           sudo chroot ~/deepin15 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
-          sudo chroot ~/deepin15 apt install linux-headers-6.4.4-amd64-desktop linux-image-6.4.4-amd64-desktop -y
+          sudo chroot ~/deepin15 apt install linux-headers-6.4.8-amd64-desktop linux-image-6.4.8-amd64-desktop -y
           sudo chroot ~/deepin15 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 rm /etc/apt/trusted.gpg.d/gfdgdxi-kernel-list.gpg
           sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/gfdgdxi-kernel-list.list
