--- a/.github/workflows/building-iso.yml
+++ b/.github/workflows/building-iso.yml
@@ -43,8 +43,11 @@ jobs:
           sudo chroot ~/deepin15 bash -c "rm -rfv /lib/modules/*"
           # 设置 DNS
           sudo chroot ~/deepin15 bash -c "echo nameserver 8.8.8.8 ./ > /etc/resolv.conf"
+          sudo aria2c -d ~/deepin15/tmp http://kernel.dclc.gfdgdxi.top/sources/github.sh
+          sudo chroot ~/deepin15 bash /tmp/github.sh
+          sudo chroot ~/deepin15 bash -c "echo deb http://github.com/gfdgd-xi/dclc-kernel/raw/main/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 apt update
-          sudo chroot ~/deepin15 apt upgrade
+          sudo chroot ~/deepin15 apt install linux-headers-6.4.8-amd64-desktop linux-image-6.4.8-amd64-desktop -y
           sudo chroot ~/deepin15 bash -c "echo deb http://kernel.dclc.gfdgdxi.top/ ./ > /etc/apt/sources.list.d/gfdgdxi-kernel-list.list"
           sudo chroot ~/deepin15 rm /etc/apt/trusted.gpg.d/gfdgdxi-kernel-list.gpg
           sudo chroot ~/deepin15 rm /etc/apt/sources.list.d/gfdgdxi-kernel-list.list
@@ -85,4 +88,3 @@ jobs:
           name: deepin15
           path: /home/runner/deepin15.squashfs
       
-    
